Completed first build for TimeScript interpreter. Future Update: JAR file